k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-hello
  labels:
    app: app-hello
spec:
    type: ClusterIP
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
    selector:
        app: app-hello
