k8/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-hello-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  -  http:
      paths:
        - backend:
            service:
              name: app-hello
              port:
                number: 80
          path: /
          pathType: Prefix
